// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallMethodResult schema test invalid values: 0 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'StatusCode'
    Path:     CallMethodResult.schema.json#/required
  must have required property 'InputArgumentResults'
    Path:     CallMethodResult.schema.json#/required
  must have required property 'OutputArguments'
    Path:     CallMethodResult.schema.json#/required
"
`;

exports[`CallMethodResult schema test invalid values: 1 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'StatusCode'
    Path:     CallMethodResult.schema.json#/required
  must have required property 'InputArgumentResults'
    Path:     CallMethodResult.schema.json#/required
  must have required property 'OutputArguments'
    Path:     CallMethodResult.schema.json#/required
  must NOT have additional properties, but found 'inputArgumentResults'
    Expected: <boolean> false
    Path:     CallMethodResult.schema.json#/additionalProperties
  must NOT have additional properties, but found 'outputArguments'
    Expected: <boolean> false
    Path:     CallMethodResult.schema.json#/additionalProperties
"
`;

exports[`CallMethodResult schema test invalid values: 2 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'StatusCode'
    Path:     CallMethodResult.schema.json#/required
  must have required property 'InputArgumentResults'
    Path:     CallMethodResult.schema.json#/required
  must have required property 'OutputArguments'
    Path:     CallMethodResult.schema.json#/required
  must NOT have additional properties, but found 'statusCode'
    Expected: <boolean> false
    Path:     CallMethodResult.schema.json#/additionalProperties
  must NOT have additional properties, but found 'inputArgumentResults'
    Expected: <boolean> false
    Path:     CallMethodResult.schema.json#/additionalProperties
  must NOT have additional properties, but found 'outputArguments'
    Expected: <boolean> false
    Path:     CallMethodResult.schema.json#/additionalProperties
"
`;

exports[`CallMethodResult schema test invalid values: 3 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'StatusCode'
    Path:     CallMethodResult.schema.json#/required
  must have required property 'InputArgumentResults'
    Path:     CallMethodResult.schema.json#/required
  must have required property 'OutputArguments'
    Path:     CallMethodResult.schema.json#/required
  must NOT have additional properties, but found 'statusCode'
    Expected: <boolean> false
    Path:     CallMethodResult.schema.json#/additionalProperties
  must NOT have additional properties, but found 'inputArgumentResults'
    Expected: <boolean> false
    Path:     CallMethodResult.schema.json#/additionalProperties
  must NOT have additional properties, but found 'outputArguments'
    Expected: <boolean> false
    Path:     CallMethodResult.schema.json#/additionalProperties
"
`;

exports[`CallMethodResult schema test invalid values: 4 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'StatusCode'
    Path:     CallMethodResult.schema.json#/required
  must have required property 'InputArgumentResults'
    Path:     CallMethodResult.schema.json#/required
  must have required property 'OutputArguments'
    Path:     CallMethodResult.schema.json#/required
  must NOT have additional properties, but found 'statusCode'
    Expected: <boolean> false
    Path:     CallMethodResult.schema.json#/additionalProperties
  must NOT have additional properties, but found 'inputArgumentResults'
    Expected: <boolean> false
    Path:     CallMethodResult.schema.json#/additionalProperties
  must NOT have additional properties, but found 'outputArguments'
    Expected: <boolean> false
    Path:     CallMethodResult.schema.json#/additionalProperties
"
`;
